--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P5 Dictation Master</title>
+    <title>VPS Dictation Master</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
@@ -185,9 +185,9 @@
                                     <img src="vpslogo.jpeg" alt="Logo" class="max-w-full max-h-full object-contain" 
                                          onerror="this.src='https://via.placeholder.com/225?text=VPS+Dictation'">
                                 </div>
-                                <div class="absolute -bottom-2 -right-2 bg-yellow-400 text-indigo-900 text-xs font-black px-3 py-1 rounded-full shadow-lg uppercase tracking-tight ring-4 ring-white">Master</div>
+                                <div class="absolute -bottom-2 -right-2 bg-yellow-400 text-indigo-900 text-xs font-black px-3 py-1 rounded-full shadow-lg uppercase tracking-tight ring-4 ring-white">P5</div>
                             </div>
-                            <h1 class="text-5xl font-black text-slate-800 mb-3 leading-tight tracking-tight">P5 Dictation</h1>
+                            <h1 class="text-5xl font-black text-slate-800 mb-3 leading-tight tracking-tight">VPS English Dictation</h1>
                             <p class="text-slate-500 text-lg px-4 leading-relaxed">The ultimate companion for your weekly spelling and sentence practice.</p>
                         </div>
                         <button onclick="setState({view: 'lessons'})" class="w-full bg-indigo-600 text-white py-5 rounded-3xl font-bold text-xl shadow-2xl shadow-indigo-200 flex items-center justify-center gap-3 active:scale-95 transition-transform">
