--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@
         // Organized Lesson Data
         const P5_LESSONS = {
             "Lesson 1": [
-                { word: "Accommodate", sentence: "The new stadium is designed to accommodate more than fifty thousand fans." },
-                { word: "Beginning", sentence: "The beginning of the movie was so exciting that everyone was quiet." },
-                { word: "Business", sentence: "My uncle decided to start his own business selling handmade furniture." },
-                { word: "Calendar", sentence: "Please check the school calendar to find out when the holidays start." },
-                { word: "Committee", sentence: "The organizing committee met today to plan the upcoming sports day." }
+                { word: "protested", sentence: "It wasn't my fault! protested Lucy." },
+                { word: "dreaded", sentence: "The dreaded moment for us to leave has arrived." },
+                { word: "constantly", sentence: "Mother constantly reminds us to clean our rooms." },
+                { word: "smirked", sentence: "Bruce smirked as he watched his mischievous prank unfold." },
+                { word: "surrounded", sentence: "The robber found himself quickly surrounded by the police." }
+                { word: "yelped in pain", sentence: "The poor dog yelped in pain as it was struck by a falling branch." },
+                { word: "forlonly", sentence: "The lost child stoof forlonly in the middle of the shopping mall." },
+                { word: "rowdy", sentence: "There was a rowdy gang of youths milling about at the void deck." },
+                { word: "hesitant", sentence: "We were hesitant about spending so much money on a single meal." },
+                { word: "stationery", sentence: "I bought a new set of stationery from the bookshop at the start of the term." }
             ],
             "Lesson 2": [
                 { word: "Definitely", sentence: "We are definitely going to the park if the weather stays sunny." },
