--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 { word: "dreaded", sentence: "The dreaded moment for us to leave has arrived." },
                 { word: "constantly", sentence: "Mother constantly reminds us to clean our rooms." },
                 { word: "smirked", sentence: "Bruce smirked as he watched his mischievous prank unfold." },
-                { word: "surrounded", sentence: "The robber found himself quickly surrounded by the police." }
+                { word: "surrounded", sentence: "The robber found himself quickly surrounded by the police." },
                 { word: "yelped in pain", sentence: "The poor dog yelped in pain as it was struck by a falling branch." },
                 { word: "forlonly", sentence: "The lost child stoof forlonly in the middle of the shopping mall." },
                 { word: "rowdy", sentence: "There was a rowdy gang of youths milling about at the void deck." },
