--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script>
         // Organized Lesson Data
         const P5_LESSONS = {
-            "Lesson 1": [
+            "Spelling 1 (Unit 1)": [
                 { word: "protested", sentence: "It wasn't my fault! protested Lucy." },
                 { word: "dreaded", sentence: "The dreaded moment for us to leave has arrived." },
                 { word: "constantly", sentence: "Mother constantly reminds us to clean our rooms." },
@@ -42,27 +42,43 @@
                 { word: "hesitant", sentence: "We were hesitant about spending so much money on a single meal." },
                 { word: "stationery", sentence: "I bought a new set of stationery from the bookshop at the start of the term." }
             ],
-            "Lesson 2": [
-                { word: "Definitely", sentence: "We are definitely going to the park if the weather stays sunny." },
-                { word: "Environment", sentence: "It is our responsibility to protect the environment for future generations." },
-                { word: "Familiar", sentence: "The melody of that song sounds very familiar, but I cannot remember the name." },
-                { word: "Government", sentence: "The local government is building a new library in our neighborhood." },
-                { word: "Immediately", sentence: "You must come home immediately after your football practice ends." }
+            "Lesson 2 (Unit 2)": [
+                { word: "demanded", sentence: "The invigilator demanded absolute silence from the class." },
+                { word: "lunge", sentence: "My opponent made a sudden, desperate lunge for the ball." },
+                { word: "flexibility", sentence: "Tina's flexibility makes her a suitable candidate for the job." },
+                { word: "humiliating", sentence: "I will never forget the humiliating experience that I was subjected to." },
+                { word: "errands", sentence: "Father had to run a few errands before bringing the family out for lunch." },
+                { word: "moping", sentence: "Instead of moping, why don't you take a walk outside? suggested Mother." },
+                { word: "debt", sentence: "We owe a debt of gratitude to the organisers who made the event possible." },
+                { word: "deserved", sentence: "We were glad to see the culprit receiving the punishment that he deserved." },
+                { word: "yearning", sentence: "I was overjoyed when I finally received the present I had been yearning for." },
+                { word: "a sense of satisfaction", sentence: "Completing the difficult task filled the students with a sense of satisfaction.
+" }
             ],
-            "Lesson 3": [
-                { word: "Interrupt", sentence: "Please do not interrupt the teacher while she is explaining the instructions." },
-                { word: "Language", sentence: "Learning a new language is a great way to understand different cultures." },
-                { word: "Necessary", sentence: "It is necessary to bring your own water bottle for the hiking trip." },
-                { word: "Occurred", sentence: "A strange idea occurred to me while I was reading that mystery book." },
-                { word: "Possession", sentence: "The old locket is my grandmother's most prized possession." }
+            "Lesson 3 (Unit 2)": [
+                { word: "protested", sentence: "It wasn't my fault! protested Lucy." },
+                { word: "dreaded", sentence: "The dreaded moment for us to leave has arrived." },
+                { word: "constantly", sentence: "Mother constantly reminds us to clean our rooms." },
+                { word: "smirked", sentence: "Bruce smirked as he watched his mischievous prank unfold." },
+                { word: "surrounded", sentence: "The robber found himself quickly surrounded by the police." },
+                { word: "yelped in pain", sentence: "The poor dog yelped in pain as it was struck by a falling branch." },
+                { word: "forlonly", sentence: "The lost child stoof forlonly in the middle of the shopping mall." },
+                { word: "rowdy", sentence: "There was a rowdy gang of youths milling about at the void deck." },
+                { word: "hesitant", sentence: "We were hesitant about spending so much money on a single meal." },
+                { word: "stationery", sentence: "I bought a new set of stationery from the bookshop at the start of the term." }
+            ],  
+            "Lesson 4 (Unit 3)": [
+                { word: "protested", sentence: "It wasn't my fault! protested Lucy." },
+                { word: "dreaded", sentence: "The dreaded moment for us to leave has arrived." },
+                { word: "constantly", sentence: "Mother constantly reminds us to clean our rooms." },
+                { word: "smirked", sentence: "Bruce smirked as he watched his mischievous prank unfold." },
+                { word: "surrounded", sentence: "The robber found himself quickly surrounded by the police." },
+                { word: "yelped in pain", sentence: "The poor dog yelped in pain as it was struck by a falling branch." },
+                { word: "forlonly", sentence: "The lost child stoof forlonly in the middle of the shopping mall." },
+                { word: "rowdy", sentence: "There was a rowdy gang of youths milling about at the void deck." },
+                { word: "hesitant", sentence: "We were hesitant about spending so much money on a single meal." },
+                { word: "stationery", sentence: "I bought a new set of stationery from the bookshop at the start of the term." }
             ],
-            "Lesson 4": [
-                { word: "Recommend", sentence: "I highly recommend this book to anyone who loves science fiction." },
-                { word: "Separate", sentence: "The two brothers decided to sleep in separate rooms from now on." },
-                { word: "Successful", sentence: "Hard work and perseverance are the keys to a successful career." },
-                { word: "Tomorrow", sentence: "We will be visiting the national museum tomorrow morning." },
-                { word: "Unfortunately", sentence: "Unfortunately, the outdoor concert was cancelled due to heavy rain." }
-            ]
         };
 
         // State Management
