--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script>
         // Organized Lesson Data
         const P5_LESSONS = {
-            "Spelling 1 ": [
+            "Spelling 1 (Unit 1)": [
                 { word: "protested", sentence: "It wasn't my fault! protested Lucy." },
                 { word: "dreaded", sentence: "The dreaded moment for us to leave has arrived." },
                 { word: "constantly", sentence: "Mother constantly reminds us to clean our rooms." },
@@ -42,7 +42,7 @@
                 { word: "hesitant", sentence: "We were hesitant about spending so much money on a single meal." },
                 { word: "stationery", sentence: "I bought a new set of stationery from the bookshop at the start of the term." }
             ],
-            "Lesson 2 ": [
+            "Lesson 2 (Unit 1)": [
                 { word: "demanded", sentence: "The invigilator demanded absolute silence from the class." },
                 { word: "lunge", sentence: "My opponent made a sudden, desperate lunge for the ball." },
                 { word: "flexibility", sentence: "Tina's flexibility makes her a suitable candidate for the job." },
@@ -55,7 +55,7 @@
                 { word: "a sense of satisfaction", sentence: "Completing the difficult task filled the students with a sense of satisfaction.
 " }
             ],
-            "Lesson 3 ": [
+            "Lesson 3 (Unit 2)": [
                 { word: "protested", sentence: "It wasn't my fault! protested Lucy." },
                 { word: "dreaded", sentence: "The dreaded moment for us to leave has arrived." },
                 { word: "constantly", sentence: "Mother constantly reminds us to clean our rooms." },
@@ -67,7 +67,7 @@
                 { word: "hesitant", sentence: "We were hesitant about spending so much money on a single meal." },
                 { word: "stationery", sentence: "I bought a new set of stationery from the bookshop at the start of the term." }
             ],  
-            "Lesson 4 ": [
+            "Lesson 4 (Unit 3)": [
                 { word: "protested", sentence: "It wasn't my fault! protested Lucy." },
                 { word: "dreaded", sentence: "The dreaded moment for us to leave has arrived." },
                 { word: "constantly", sentence: "Mother constantly reminds us to clean our rooms." },
