--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
                 { word: "debt", sentence: "We owe a debt of gratitude to the organisers who made the event possible." },
                 { word: "deserved", sentence: "We were glad to see the culprit receiving the punishment that he deserved." },
                 { word: "yearning", sentence: "I was overjoyed when I finally received the present I had been yearning for." },
-                { word: "a sense of satisfaction", sentence: "Completing the difficult task filled the students with a sense of satisfaction.
-" }
+                { word: "a sense of satisfaction", sentence: "Completing the difficult task filled the students with a sense of satisfaction." }
             ],
             "Lesson 3 (Unit 2)": [
                 { word: "protested", sentence: "It wasn't my fault! protested Lucy." },
