--- a/index.html
+++ b/index.html
@@ -57,16 +57,17 @@
                 { word: "a sense of satisfaction", sentence: "Completing the difficult task filled the students with a sense of satisfaction." }
             ],
             "Lesson 3 (Unit 2)": [
-                { word: "protested", sentence: "It wasn't my fault! protested Lucy." },
-                { word: "dreaded", sentence: "The dreaded moment for us to leave has arrived." },
-                { word: "constantly", sentence: "Mother constantly reminds us to clean our rooms." },
-                { word: "smirked", sentence: "Bruce smirked as he watched his mischievous prank unfold." },
-                { word: "surrounded", sentence: "The robber found himself quickly surrounded by the police." },
-                { word: "yelped in pain", sentence: "The poor dog yelped in pain as it was struck by a falling branch." },
-                { word: "forlornly", sentence: "The lost child stood forlornly in the middle of the shopping mall." },
-                { word: "rowdy", sentence: "There was a rowdy gang of youths milling about at the void deck." },
-                { word: "hesitant", sentence: "We were hesitant about spending so much money on a single meal." },
-                { word: "stationery", sentence: "I bought a new set of stationery from the bookshop at the start of the term." }
+                { word: "torrents", sentence: "The rain gushed from the sky in torrents." },
+                { word: "sprightly", sentence: "Despite his old age, Grandpa is still as sprightly as ever." },
+                { word: "devastating", sentence: "Kara broke down in tears upon hearing the devastating news." },
+                { word: "stranded", sentence: "The snowstorm left many travellers stranded at the airport." },
+                { word: "enclosures", sentence: "Animals at the zoo are kept in enclosures for everyone's safety." },
+                { word: "personality", sentence: "Jim has a strong personality which can be intimidating at times." },
+                { word: "phenomena", sentence: "Hurricanes and earthquakes are examples of natural phenomena." },
+                { word: "abruptly", sentence: "We were thrown off-balance when the escalator abruptly stopped." },
+                { word: "companions", sentence: "Many people keep pets as they find them to be perfect companions." },
+                { word: "extraordinary", sentence: "The audience clapped after witnessing the performer's extraordinary feat of
+strength." }
             ],  
             "Lesson 4 (Unit 3)": [
                 { word: "protested", sentence: "It wasn't my fault! protested Lucy." },
