--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                 { word: "phenomena", sentence: "Hurricanes and earthquakes are examples of natural phenomena." },
                 { word: "abruptly", sentence: "We were thrown off-balance when the escalator abruptly stopped." },
                 { word: "companions", sentence: "Many people keep pets as they find them to be perfect companions." },
-                { word: "extraordinary", sentence: "The audience clapped after witnessing the performer's extraordinary feat of
-strength." }
+                { word: "extraordinary", sentence: "The audience clapped after witnessing the performer's extraordinary feat of strength." }
             ],  
             "Lesson 4 (Unit 3)": [
                 { word: "protested", sentence: "It wasn't my fault! protested Lucy." },
