--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 { word: "hesitant", sentence: "We were hesitant about spending so much money on a single meal." },
                 { word: "stationery", sentence: "I bought a new set of stationery from the bookshop at the start of the term." }
             ],
-            "Lesson 2 (Unit 1)": [
+            "Spelling 2 (Unit 1)": [
                 { word: "demanded", sentence: "The invigilator demanded absolute silence from the class." },
                 { word: "lunge", sentence: "My opponent made a sudden, desperate lunge for the ball." },
                 { word: "flexibility", sentence: "Tina's flexibility makes her a suitable candidate for the job." },
@@ -56,7 +56,7 @@
                 { word: "yearning", sentence: "I was overjoyed when I finally received the present I had been yearning for." },
                 { word: "a sense of satisfaction", sentence: "Completing the difficult task filled the students with a sense of satisfaction." }
             ],
-            "Lesson 3 (Unit 2)": [
+            "Spelling 3 (Unit 2)": [
                 { word: "torrents", sentence: "The rain gushed from the sky in torrents." },
                 { word: "sprightly", sentence: "Despite his old age, Grandpa is still as sprightly as ever." },
                 { word: "devastating", sentence: "Kara broke down in tears upon hearing the devastating news." },
@@ -68,7 +68,7 @@
                 { word: "companions", sentence: "Many people keep pets as they find them to be perfect companions." },
                 { word: "extraordinary", sentence: "The audience clapped after witnessing the performer's extraordinary feat of strength." }
             ],  
-            "Lesson 4 (Unit 3)": [
+            "Spelling 4 (Unit 3)": [
                 { word: "protested", sentence: "It wasn't my fault! protested Lucy." },
                 { word: "dreaded", sentence: "The dreaded moment for us to leave has arrived." },
                 { word: "constantly", sentence: "Mother constantly reminds us to clean our rooms." },
