--- a/index.html
+++ b/index.html
@@ -90,17 +90,69 @@
 
 
        const P5_DICTATION = {
-           "Dictation 1 (Unit 1)": [
-               "It was a scorching afternoon.",
-               "The sun beat down mercilessly on the parched earth.",
-               "Tired and thirsty, we trudged along the dusty path.",
-               "Suddenly, we heard a rustle in the nearby bushes."
+           "Dictation 1": [
+               "Heading towards the canteen,"
+               "I spotted Carl's"
+               "threatening figure at the foot"
+               "of the staircase."
+               "The notorious"
+               "school bully was sneering" 
+               "at anyone who got"
+               "too close to him."
+               "I gulped and"
+               "quickly spun on my heel."
+               "New paragraph"
+               "two finger spacing"
+               "Too late."
+               "New paragraph"
+               "two finger spacing"
+               "Stop right there, John!"
+               "as our supporters."
+               "came the dreaded voice"
+               "as I froze in my tracks."
+               "The humiliation"
+               "was about to begin."
+               "Carl moved with"
+               "exceptional speed for his size"
+               "and within seconds,"
+               "I was standing in"
+               "the shadow of his bulky"
+               "frame."
+               "He jabbed a meaty"
+               "finger in my chest"
+               "and demanded"
+               "my pocket money,"
+               "as he always did."
            ],
-           "Dictation 2 (Unit 2)": [
-               "The old man lived in a quaint cottage by the sea.",
-               "He spent his days reading books and tending to his garden.",
-               "Everyone in the village knew him for his kind heart.",
-               "One day, a mysterious stranger appeared at his door."
+           "Dictation 2": [
+               "It was like a scene"
+               "playing in slow motion: "
+               "An opponent's reckless lunge"
+               "caught Joe high on the shin."
+               "My teammate crumpled to the"
+               "ground in agony." 
+               "An angry roar erupted from the"
+               "crowd of spectators."
+               "New paragraph"
+               "two finger spacing"
+               "Foul, I screamed,"
+               "feeling the same indignation"
+               "as our supporters."
+               "Seeing red,"
+               "I charged towards"
+               "the perpetrator,"
+               "my eyes blazing with fury."
+               "My fists were clenched"
+               "and ready to swing"
+               "before I was stopped"
+               "by multiple pairs of hands"
+               "that grabbed at me, "
+               "shoving me aside. "
+               "Tempers flared and"
+               "rude remarks"
+               "were exchanged"
+               "between players in"
+               "the heat of the moment."
            ]
        };
 
