Finish everything, yay!

--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
                 { word: "extraordinary", sentence: "The audience clapped after witnessing the performer's extraordinary feat of strength." }
             ],  
             "Spelling 4 (Unit 3)": [
-                { word: "protested", sentence: "It wasn't my fault! protested Lucy." },
-                { word: "dreaded", sentence: "The dreaded moment for us to leave has arrived." },
-                { word: "constantly", sentence: "Mother constantly reminds us to clean our rooms." },
-                { word: "smirked", sentence: "Bruce smirked as he watched his mischievous prank unfold." },
-                { word: "surrounded", sentence: "The robber found himself quickly surrounded by the police." },
-                { word: "yelped in pain", sentence: "The poor dog yelped in pain as it was struck by a falling branch." },
-                { word: "forlornly", sentence: "The lost child stood forlornly in the middle of the shopping mall." },
-                { word: "rowdy", sentence: "There was a rowdy gang of youths milling about at the void deck." },
-                { word: "hesitant", sentence: "We were hesitant about spending so much money on a single meal." },
-                { word: "stationery", sentence: "I bought a new set of stationery from the bookshop at the start of the term." }
+                { word: "possession", sentence: "This necklace is my mother's most prized possession." },
+                { word: "discipline", sentence: "The coach reprimanded his players for their lack of discipline." },
+                { word: "convert", sentence: "We have to convert our cash to foreign currency before travelling." },
+                { word: "quarrel", sentence: "Let's not quarrel over such a trivial matter, urged my best friend." },
+                { word: "acrobatic", sentence: "With an acrobatic leap, the dancer seemed to soar across the stage." },
+                { word: "feigned", sentence: "When asked about the crime, Tom just shrugged and feigned ignorance." },
+                { word: "incessant", sentence: "The incessant noise from the construction site affected our concentration." },
+                { word: "senior", sentence: "As a senior player of the team, you should be a good role model for the others." },
+                { word: "gruff", sentence: "I was surprised by the salesman's gruff reply. Perhaps he was having a bad day." },
+                { word: "conflict", sentence: "Preferring to avoid conflict, I agreed with whatever suggestions my group members gave." }
             ]
         };
 
